Bug 803474 - [lock screen] animated arrows are sometimes visible shortly before unlocking r=timdream a=vingtetun

--- a/apps/system/style/lockscreen/lockscreen.css
+++ b/apps/system/style/lockscreen/lockscreen.css
@@ -469,9 +469,8 @@
   margin: -1.1rem;
 }
 
-.touched .lockscreen-arrow,
-#screen:not(.locked) .lockscreen-arrow,
-#lockscreen:not([data-panel="main"]) .lockscreen-arrow {
+:-moz-any(.touched, .triggered, #screen:not(.locked), #lockscreen:not([data-panel="main"]))
+:-moz-any(#lockscreen-left-arrow, #lockscreen-right-arrow) {
   display: none;
   animation: none;
 }
